# pmsm_ml_torque_estimator

./: foc_controller.py  load_profiles.py  pidController.py  pmsm_plant.py  pmsm_plotter.py  pmsm_simulator.py  pyproject.toml  run_pmsm_sim.py  setup.ps1  speed_controller.py
src/notebooks/: 01_eda.ipynb
src/simulation/: foc_controller.py  pmsm_plotter.py  run_pmsm_sim.py  sensors.py
